--- a/index.html
+++ b/index.html
@@ -7,17 +7,37 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- intestazione della pagina -->
     <header class="nerko-one-regular">
         <h1>Giallo Booleano</h1>
-
     </header>
     <!-- /intestazione della pagina -->
     <!-- corpo della pagina -->
-    <main></main>
+    <main class="montserrat">
+        <section>
+            <div>DOLCE E DESSERT</div>
+            <h2> Tiramisù <span class="title">(Dolce Tradizionale)</span></h2>
+            <div class="imgyt"><img src="img/tiramisuyt.png" alt=""></div>
+            <div class="info">
+                <ul>
+                    <h3>In breve</h3>
+                    <li>Difficoltà: <strong>Facile</strong></li>
+                    <li>Tempo: <strong>40 min</strong></li>
+                    <li>Porzione per: <strong>8 persone</strong></li>
+                    <li>Costo: <strong>Contenuto</strong></li>
+                    <li><strong>Note:</strong> +2 ore di riposo in frigo</li>
+                </ul>
+            </div>
+        </section>
+
+
+    </main>
     <!-- /corpo della pagina -->
     <!-- piede della pagina -->
     <footer></footer>
