--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <!-- corpo della pagina -->
     <main class="montserrat">
         <section>
-            <div>DOLCE E DESSERT</div>
+            <div>DOLCI E DESSERT</div>
             <h2> Tiramisù <span class="title">(Dolce Tradizionale)</span></h2>
-            <div class="imgyt"><img src="img/tiramisuyt.png" alt=""></div>
-            <div class="info">
-                <ul>
-                    <h3>In breve</h3>
+            <div class="container">
+                <img src="img/tiramisuyt.png" alt="">
+           <div class="info">
+            <h3>In breve</h3>
+                <ul class="lista">
+                    
                     <li>Difficoltà: <strong>Facile</strong></li>
                     <li>Tempo: <strong>40 min</strong></li>
                     <li>Porzione per: <strong>8 persone</strong></li>
@@ -34,6 +36,22 @@
                     <li><strong>Note:</strong> +2 ore di riposo in frigo</li>
                 </ul>
             </div>
+        </div>
+    
+        </section>
+        <section>
+            <div class="social">
+                <ul class="icon">
+                    <li>fb</li>
+                    <li>twitter</li>
+                    <li>insta</li>
+                    <li>pinterest</li>
+                    <li>yt</li>
+                </ul>
+
+
+            </div>
+
         </section>
 
 
