--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
             <div class="container">
                 <img src="img/tiramisuyt.png" alt="">
            <div class="info">
-            <h3>In breve</h3>
-                <ul class="lista">
-                    
-                    <li>Difficoltà: <strong>Facile</strong></li>
-                    <li>Tempo: <strong>40 min</strong></li>
-                    <li>Porzione per: <strong>8 persone</strong></li>
-                    <li>Costo: <strong>Contenuto</strong></li>
-                    <li><strong>Note:</strong> +2 ore di riposo in frigo</li>
+                <h3>In breve</h3>
+                <ul>
+                    <li class="list">Difficoltà: <strong>Facile</strong></li>
+                    <li class="list">Tempo: <strong>40 min</strong></li>
+                    <li class="list">Porzione per: <strong>8 persone</strong></li>
+                    <li class="list">Costo: <strong>Contenuto</strong></li>
+                    <li class="list"><strong>Note:</strong> +2 ore di riposo in frigo</li>
                 </ul>
             </div>
         </div>
