feat: add banner section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -39,18 +40,24 @@
     
         </section>
         <section>
-            <div class="social">
+            <div class="ciao">
                 <ul class="icon">
-                    <li>fb</li>
-                    <li>twitter</li>
-                    <li>insta</li>
-                    <li>pinterest</li>
-                    <li>yt</li>
+                    <li><div class="social"><i class="fa-brands fa-facebook"></i><span>FACEBOOK</span></div></li>
+                    <li><div class="social"><i class="fa-brands fa-twitter"></i></div><span>TWITTER</span></li>
+                    <li><div class="social"><i class="fa-brands fa-instagram"></i></div><span>INSTAGRAM</span></li>
+                    <li><div class="social"><i class="fa-brands fa-pinterest"></i><span>PINTEREST</span></div></li>
+                    <li><div class="social"><i class="fa-brands fa-youtube"></i></div><span>YOUTUBE</span></li>
                 </ul>
-
-
             </div>
-
+        </section>
+        <section>
+            <div class="banner"><img src="img/banner.png" alt="banner"></div>
+        </section>
+        <section>
+            <h2 class="soft">PRESENTATION</h2>
+            <hr>
+            <div class="presentation"><img src="img/tiramisu.jpg" alt="tiramisu">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem blanditiis at nihil sit quia. Debitis praesentium error, ipsum deleniti necessitatibus cum ex aliquam sed fugit rerum, eius laboriosam laudantium ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor magni ut esse hic, corrupti velit nostrum inventore tenetur incidunt nesciunt, est facilis aperiam expedita eum illum saepe. Aliquam, consequatur. Laudantium? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum placeat deleniti quos consequatur alias obcaecati reiciendis, ex laudantium corrupti optio voluptate sequi atque error autem inventore quo nihil consectetur dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius nulla, culpa enim blanditiis assumenda perspiciatis distinctio ullam quas deserunt aut temporibus corrupti? Voluptate enim eius distinctio harum at. Voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae error tempore placeat, asperiores eaque modi cum dolorem iusto inventore. Perferendis quas vel dolor, accusamus magni quisquam. Reiciendis ex odio repellat.</div>
         </section>
 
 
